Support gateway without agent (#3308)
* Support Gateway without agent